--- a/Back/src/CepaApp.API/appsettings.Development.json
+++ b/Back/src/CepaApp.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+    "Default": "Data Source=E_learning.db"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
